--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   font-size: large;
 }
 
+.main-content {
+  margin-top: 2em;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
