Item component updated: full info modal with edit functionality

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@
   font-weight: normal !important;
 }
 
+.input-edit input {
+  background-color: lightyellow !important;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
