Weapon component updated: full info modal with edit functionality

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   font-weight: normal !important;
 }
 
-.input-edit input {
+.input-edit, .input-edit input {
   background-color: lightyellow !important;
 }
 
