added edit & save buttons to attr table header

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,12 @@
   background-color: lightyellow !important;
 }
 
+.table-header-edit {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
