implemented edit functionality

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@
   align-items: center;
 }
 
+p {
+  font-size: 1.25em;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
