--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 }
 
 p {
-  /*font-size: 1.5em;*/
+  font-size: 1.25em;
 }
 
 a.nav-link {
@@ -66,6 +66,10 @@ div.nav-bar {
 
 .table-bottom-margin {
   margin-bottom: 2em !important;
+}
+
+div.scrolling-modal-content.scrolling.content {
+  padding-top: 0 !important;
 }
 
 @keyframes App-logo-spin {
